Bug 639415 - Disable prescaling of videos if they have an offset due to chromium scaling code not supporting offsets - r=kinetik

--HG--
extra : rebase_source : 0b72a504f731a81a498876a28dfae0d7c4aebded